# dbdiag

./: .gitignore  README.md  ophistory.py  pyproject.toml
.github/workflows/: release.yml
dbdiag/: __init__.py  __main__.py  cli.py  constants.py  model.py  ophistory.py  parser.py  render.py  spans.py  units.py
examples/: ophistory_all.txt
src/: ophistory.py
tests/: __init__.py  test_parser.py  test_spans.py
