[tool.poetry]
name = "dbdiag"
version = "0.0.0"
description = "dbdiag"
authors = ["Alex Miller <millerdevel@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thisismiller/dbdiag"
repository = "https://github.com/thisismiller/dbdiag"
documentation = "https://github.com/thisismiller/dbdiag/README.md"
packages = [
    { include = "dbdiag" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/thisismiller/dbdiag/releases"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.scripts]
dbdiag = "src.ophistory:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
